ElastosBountyProgram/front-end/src/style/mobile.scss
@import './variable';

// hiding certain elements at full size
.c_Header .c_MenuItem.mobile {
  display: none;
}

// mobile
@media only screen and (max-width: $mobile-width) {

  .mobile-hide {
    display: none;
  }

  .mobile-left-align {
    text-align: left;
  }

  h2 {
    font-size: 20px;
  }

  .c_Header {

    .c_Header_Menu {

      .c_MenuItem {

        &.link {
          display: none;
          padding: 0 3px;
          top: 25px;
          height: 49px;
          font-size: 13px;

          margin-right: 2vw;
        }

        &.account {
          display: none;
        }

        &.mobile {
          padding-left: 0;
          display: block;
          float: right;
          font-size: 150%;

          i {
            margin-right: 0;
          }
        }
      }
    }

    .c_MenuTopRight {
      display: none;
      font-size: 12px;
    }
  }

  .d_topBackdrop_title {
    font-size: 22px;
  }

  .ebp-page {
    .d_leftContainer {
      border-right: none;
    }
  }

  .ebp-page, .ebp-wrap {
    padding: 0 20px;
  }

  /*
  ****************************************************************************
  Landing Page
  ****************************************************************************
   */
  .p_landingBg {
    background-repeat: no-repeat;
    background-size: cover;

    .entryContainer {
      width: 100%;

      > .continueContainer {
        margin: 0 auto;
        position: static;

        text-align: center;
        border-bottom: 0;

        margin-top: 10vh;
      }

      > .arrow {
        display: none;
      }
    }

    .textContainer, .bar {
      display: none;
    }
  }

  /*
  ****************************************************************************
  Home
  ****************************************************************************
   */
  .c_Home {

    p.mobile-left-align {
      padding: 0 $gap_1;
      margin-bottom: $gap_1;
    }

    .d_rowHome {
      position: static;

      > .d_organizer {
        float: none;
        position: static;
      }
    }

    .d_colEvents {
      border-left: none;
    }

    .d_topBackdrop {
      background-position: 75% 50%;
    }

    .entryContainer {
      position: static;
      width: 100%;
      height: auto;
      margin-bottom: $gap_2;

      .textContainer {
        position: static;
        padding: 0 $gap_1;
      }

      .bar {
        display: none;
      }
    }
  }

  /*
  ****************************************************************************
  Profile
  ****************************************************************************
   */
  .c_Member {

    &.public {

      padding: 0 $gap_1;

    }
  }

  /*
  ****************************************************************************
  Admin
  ****************************************************************************
   */
  .admin-left-column, .admin-right-column {
    padding: 0;
    border-left: 0;
  }

  .ant-form {
    padding: 0 $gap_1;
  }

  /*
  ****************************************************************************
  Developer
  ****************************************************************************
   */
  .p_Developer {
    .ebp-page {
      .d_rowTop {
        .d_box {
          margin: 5px 0;
        }
      }
      .d_bottomRow {
        margin-bottom: 20px;
        .component-box {
          .button-container {
            text-align: center;
          }
        }
      }
    }
  }

  /*
  ****************************************************************************
  Other
  ****************************************************************************
  */
  table {
    > thead.ant-table-thead > tr > th {
      word-break: normal;
      white-space: nowrap;
    }

    .ant-table-thead > tr > th {
      padding: 16px 3px;
    }
    .ant-table-tbody > tr > td {
      padding: 16px 3px;
      font-size: 12px;
    }
  }

  .p_Developer, .p_Social {

    .d_box {
      padding: 0;

      .btnContainer {
        width: 100%;
      }

      .pull-left {
        text-align: left;
      }

      .pull-right {
        text-align: left;
      }
    }

    .ebp-page-desc > p {
      padding-left: 15px;
      padding-right: 15px;
    }

    .ant-table-expand-icon-th, .ant-table-row-expand-icon-cell {
      min-width: min-content;
      width: fit-content;
    }

  }
}

